# DL-CM

./: .gitignore  MANIFEST.in  config_template.yaml  pyproject.toml  readme.md  schema.yaml  setup.py
dl_cm/: __init__.py  pred_schema.yaml  schema.yaml
dl_cm/common/: __init__.py  typing.py
dl_cm/common/data/: __init__.py  base_dataloader.py  datamodule.py  preprocessing.py
dl_cm/common/datasets/: __init__.py  augmented_dataset.py  base_dataloader.py  combined_dataset.py  datamodule.py  filtered_dataset.py  images_dataset.py  items_dataset.py  ordered_dataset.py  preprocessed_dataset.py  shuffled_dataset.py  split_datasets.py  sub_dataset.py
dl_cm/common/functions/: __init__.py
dl_cm/common/learning/: __init__.py  base_learner.py  criterion_learner.py  equivariance_enforced_learner.py  extra_learners.py  optimizable_learner.py  supervised_learner.py  test_learners.py  unsupervised_learner.py
dl_cm/common/models/: __init__.py  base_model.py
dl_cm/common/tasks/: __init__.py  base_task.py  criterion.py  metrics.py  mixed_variance_reduction_task.py  optimizer.py  variance_reduction_task.py
dl_cm/common/trainer/: __init__.py  loggers.py  plugins.py
dl_cm/common/trainers/: __init__.py  base_trainer.py  callbacks.py  loggers.py  plugins.py
dl_cm/config_loaders/: __init__.py  data_config_loader.py  trainer_config_loader.py
dl_cm/sample_configs/e2e/: voc_segmentation.yaml
dl_cm/sample_configs/learning/: SegmentationEquivarianceEnforcedLearner.yaml
dl_cm/scripts/: __init__.py  predict.py  train.py
dl_cm/scripts/common_scripts/: __init__.py  base_prediction_command.py  base_training_command.py
dl_cm/third_party_integration/: __init__.py
dl_cm/third_party_integration/smp/: __init__.py
dl_cm/utils/: config_validation.py  registery.py
dl_cm/utils/exceptions/: __init__.py
dl_cm/utils/ppattern/: batch_operations.py  data_validation.py  factory.py  init_check_mixin.py  named_mixin.py  self_registered_mixin.py
src/: __init__.py
src/common/datasets/: __init__.py
src/common/tasks/: base_task.py
src/common/trainers/: callbacks.py
src/scripts/common_scripts/: __init__.py  base_prediction_command.py  base_training_command.py
tests/: test_common_scripts.py
(+44 files in other folders)
